<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.betinho.epilepsy.EscolherPerfil"
    android:background="@drawable/background">

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/img_moderado"
        android:clickable="true"
        android:background="@drawable/user"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/img_preciso"
        android:clickable="true"
        android:background="@drawable/user"
        android:layout_alignTop="@+id/img_moderado"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/perfil_moderado"
        android:id="@+id/textView5"
        android:textColor="#ffffffff"
        android:layout_below="@+id/img_moderado"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/img_moderado"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/perfil_preciso"
        android:id="@+id/textView6"
        android:textColor="#ffffffff"
        android:layout_below="@+id/img_preciso"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/img_preciso"
        android:layout_marginLeft="35dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explicacao_perfil"
        android:id="@+id/textView7"
        android:textColor="#ffffffff"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>