<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.promobile.epilepticdetector.MainActivity"
    android:focusableInTouchMode="false"
    android:background="@drawable/background">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/img_ativar"
        android:background="@drawable/desativado"
        android:clickable="true"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:visibility="visible" />

    <ImageButton
        android:id="@+id/img_perfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/img_ativar"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_toEndOf="@+id/img_ativar"
        android:layout_toRightOf="@+id/img_ativar"
        android:background="@drawable/user"
        android:clickable="true"
        android:focusable="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/img_agenda"
        android:background="@drawable/agenda"
        android:layout_below="@+id/img_ativar"
        android:layout_alignLeft="@+id/img_ativar"
        android:layout_alignStart="@+id/img_ativar"
        android:layout_marginTop="100dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/img_alerta"
        android:background="@drawable/alerta"
        android:layout_alignTop="@+id/img_agenda"
        android:layout_alignLeft="@+id/img_perfil"
        android:layout_alignStart="@+id/img_perfil"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/desativado"
        android:id="@+id/txt_ativado"
        android:textColor="#ffffffff"
        android:layout_below="@+id/img_ativar"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/img_agenda"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/perfil"
        android:id="@+id/textView2"
        android:textColor="#ffffffff"
        android:layout_below="@+id/img_perfil"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/img_perfil"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contatos"
        android:id="@+id/textView3"
        android:textColor="#ffffffff"
        android:layout_below="@+id/img_agenda"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/img_agenda"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alerta"
        android:id="@+id/textView4"
        android:textColor="#ffffffff"
        android:layout_below="@+id/img_alerta"
        android:layout_marginTop="20dp"
        android:layout_alignLeft= "@id/img_alerta"
        android:layout_marginLeft="20dp"/>

</RelativeLayout>